# document-folder-structure

./: .gitignore  README.md  README.md.bak  config.json  config.json.bak  document_folder_structure.py  document_folder_structure.py.bak  pyproject.toml  setup.py
.github/workflows/: python-pypi-publish.yml
DOCUMENTATION_EXAMPLES/: all_files_content.html  all_files_content.md  directory_tree.html  directory_tree.md
docs/: document_folder_structure.html  index.html  search.js
document_folder_structure/: __init__.py  main.py
